stylesheet error, and NOT functioning collection script

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Corona ZH</title>
 </head>
 <body>
-<h1 style="font-weight: bold">Corona MAP Test</h1>
+<h1>Corona MAP Test</h1>
 
 <!-- Javascript -->
 <script src="javascript.js"></script>
