Clickable Color Changes

--- a/index.html
+++ b/index.html
@@ -1,36 +1,14 @@
-<html lang="de">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <!-- CSS -->
-    <link rel="stylesheet" type="text/x-sass" href="stylesheet.sass">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>Corona ZH</title>
 </head>
 <body>
-<h1>Corona MAP Test</h1>
-
-<!-- Javascript -->
-<script src="javascript.js"></script>
-
-<!-- Buttons -->
-<div class="buttons">
-</div>
-
-<!-- SVG MAP Kanton ZH -->
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 6272 7360">
-    <defs>
-        <style>
-            .cls-1 {
-                fill: #666;
-            }
-
-            .cls-1, .cls-2 {
-                opacity: 0.3;
-            }
-
-            .cls-2 {
-                fill: #489dd7;
-            }
-        </style>
-    </defs>
+<h1>Corona Map</h1>
+<div class="buttons"></div>
+<svg class ="svg2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 6272 7360">
     <g id="Dots">
         <circle class="cls-1" cx="1852" cy="917" r="27"/>
         <circle class="cls-1" cx="1906" cy="917" r="27"/>
@@ -8066,10 +8044,10 @@
         <circle class="cls-1" cx="2986" cy="431" r="27"/>
         <circle class="cls-1" cx="3040" cy="431" r="27"/>
         <circle class="cls-1" cx="3094" cy="431" r="27"/>
-        <g id="_8247" data-name="8247">
+        <g id="_8247" data-name="8247" class="cls-5" >
             <circle class="cls-1" cx="2824" cy="161" r="27"/>
             <circle id="_Ellipse_" data-name="&lt;Ellipse&gt;" class="cls-1" cx="2824" cy="215" r="27"/>
-            <circle class="cls-1" cx="2878" cy="215" r="27"/>
+            <circle  class="cls-1" cx="2878" cy="215" r="27"/>
             <circle class="cls-1" cx="2932" cy="269" r="27"/>
             <circle class="cls-1" cx="2986" cy="269" r="27"/>
             <circle class="cls-1" cx="2824" cy="323" r="27"/>
@@ -8085,7 +8063,7 @@
         <circle class="cls-1" cx="3148" cy="431" r="27"/>
         <circle class="cls-1" cx="3202" cy="431" r="27"/>
         <circle class="cls-1" cx="3256" cy="431" r="27"/>
-        <g id="_8246" data-name="8246">
+        <g id="_8246" data-name="8246" class="cls-5">
             <circle id="_Ellipse_2" data-name="&lt;Ellipse&gt;" class="cls-1" cx="3094" cy="215" r="27"/>
             <circle id="_Ellipse_3" data-name="&lt;Ellipse&gt;" class="cls-1" cx="3094" cy="269" r="27"/>
             <circle id="_Ellipse_4" data-name="&lt;Ellipse&gt;" class="cls-1" cx="3148" cy="215" r="27"/>
@@ -8378,6 +8356,6 @@
         <circle class="cls-1" cx="448" cy="2699" r="27"/>
     </g>
 </svg>
-
 </body>
+<script src="javascript.js"></script>
 </html>
