--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <div class="topBar" id="topbar">
     <h1>Corona Map</h1>
     <div>
-        <input class="slider" type="range" step="86400000" max="1595289600000" min="1594335363000" value="1594335363000" id="rangeControlledByDate" onchange="setup()" onclick="tablefunction()" >
+        <input class="slider" type="range" step="86400000" max="1595289600000" min="1594335363000" value="1594335363000" id="rangeControlledByDate" onchange="setup(); tablefunction()" >
     </div>
 </div>
 <div class="row">
     <div class="column">
         <label id="datepickerlabel" for="dateControlledByRange">Datum wählen:</label>
-        <input type="date" max="2021-12-31" min="2020-07-09" value="2020-07-09" id="dateControlledByRange" onchange="setup()"/>
+        <input type="date" max="2021-12-31" min="2020-07-09" value="2020-07-09" id="dateControlledByRange" onchange="setup(); tablefunction()"/>
         <div class="relationButtons">
             <input name="reason" type="radio" value="Fit Description">In Relation zur Bevölkerungsdichte<br>
             <input class="radiobutton" name="reason" type="radio" value="Fit Description">In Relation zur
