--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <div class="topBar" id="topbar">
     <h1>Corona Map</h1>
     <div>
-        <input class="slider" type="range" step="86400000" max="1595289600000" min="1594335363000" value="1594335363000" id="rangeControlledByDate" onchange="setup(); tablefunction(); labelfunction(); labelfunctiontwo()" >
+        <input class="slider" type="range" step="86400000" max="1595289600000" min="1594335363000" value="1594335363000" id="rangeControlledByDate" onchange="setup(); tablefunction(); labelfunction();" >
     </div>
 </div>
 <div class="row">
     <div class="column">
         <label id="datepickerlabel" for="dateControlledByRange">Datum wählen:</label>
-        <input type="date" max="2021-12-31" min="2020-07-09" value="2020-07-09" id="dateControlledByRange" onchange="setup(); tablefunction()"/>
+        <input type="date" max="2021-12-31" min="2020-07-09" value="2020-07-09" id="dateControlledByRange" onchange="setup(); tablefunction(); labelfunction();"/>
         <div class="relationButtons">
             <input name="reason" type="radio" value="Fit Description">Datumsbereich<br>
             <input class="radiobutton" name="reason" type="radio" value="Fit Description">In Relation zur Bevölkerungsdichte<br>
@@ -28,7 +28,7 @@
         <div class="row">
             <div class="column">
                 <label for="vergleicheins" class="inputlabel">Vergleich PLZ 1:</label>
-                <input id="vergleicheins" name="plzinput" type="text" value="8001" oninput="labelfunction()">
+                <input id="vergleicheins" name="plzinput" type="text" value="" oninput="labelfunction()">
                 <div class="boxed">
                     <div id="vergleich" >
 
@@ -37,7 +37,7 @@
             </div>
             <div class="column">
                 <label for="vergleichzwei" class="inputlabel">Vergleich PLZ 2:</label>
-                <input id="vergleichzwei" name="plzinput" type="text" value="8002" oninput="labelfunction()">
+                <input id="vergleichzwei" name="plzinput" type="text" value="" oninput="labelfunction()">
                 <div class="boxed">
                     <div id="vergleich1">
 
