--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <input type="date" max="2021-12-31" min="2020-07-09" value="2020-07-09" id="dateControlledByRange" onchange="setup(); tablefunction(); labelfunction();"/>
         <div class="relationButtons">
             <input name="reason" type="radio" value="Fit Description">Datumsbereich<br>
-            <input class="radiobutton" name="reason" type="radio" value="Fit Description">In Relation zur Bevölkerungsdichte<br>
-            <input class="radiobutton" name="reason" type="radio" value="Fit Description">In Relation zur
-            Bevölkerungsanzhal<br>
-            <input class="radiobutton" name="reason" type="radio" value="Fit Description" checked="checked">Ohne
+            <input onchange="setup()" class="radiobutton" name="reason" type="radio" value="Fit Description">In Relation zur Bevölkerungsdichte<br>
+            <input onchange="setup()" id="anzahlb" class="radiobutton" name="reason" type="radio" value="Fit Description">In Relation zur
+            Bevölkerungsanzhal (Pro 20'000 Einwohner)<br>
+            <input onchange="setup()"class="radiobutton" name="reason" type="radio" value="Fit Description" checked="checked" >Ohne
             Filter<br>
         </div>
         <div class="row">
