popup first try

--- a/index.html
+++ b/index.html
@@ -59,11 +59,17 @@
         </table>
     </div>
         </div>
+    <div id="mypopup">
+        <h2>PLZ: </h2>
+        <h2 id="plzPopup"></h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
     <div class="column">
         <svg class="svg2" viewBox="0 0 6272 7360" xmlns="http://www.w3.org/2000/svg">
             <g id="Dots">
                 <g id="Seen">
-                    <g id="Greifensee">
+                    <g id="Greifensee" onclick="myFunction()">
                         <circle class="cls-1" cx="3148" cy="4319" r="27"/>
                         <circle class="cls-1" cx="3148" cy="4427" r="27"/>
                         <circle class="cls-1" cx="3202" cy="4427" r="27"/>
