--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <svg class="svg2" viewBox="0 0 6272 7360" xmlns="http://www.w3.org/2000/svg">
             <g id="Dots">
                 <g id="Seen">
-                    <g id="Greifensee" onclick="myFunction()">
+                    <g id="Greifensee" onmouseover="updateHoverData('Greifensee')">
                         <circle class="cls-1" cx="3148" cy="4319" r="27"/>
                         <circle class="cls-1" cx="3148" cy="4427" r="27"/>
                         <circle class="cls-1" cx="3202" cy="4427" r="27"/>
