--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <svg class="svg2" viewBox="0 0 6272 7360" xmlns="http://www.w3.org/2000/svg">
             <g id="Dots">
                 <g id="Seen">
-                    <g id="Greifensee" onmouseover="updateHoverData('Greifensee')">
+                    <g id="Greifensee" onmouseover="updateHoverData('8001')">
                         <circle class="cls-1" cx="3148" cy="4319" r="27"/>
                         <circle class="cls-1" cx="3148" cy="4427" r="27"/>
                         <circle class="cls-1" cx="3202" cy="4427" r="27"/>
@@ -107,7 +107,7 @@
                         <circle class="cls-1" cx="3472" cy="4967" r="27"/>
                         <circle class="cls-1" cx="3580" cy="4859" r="27"/>
                     </g>
-                    <g id="Pfaeffikersee" onmouseover="updateHoverData('Pfaeffikersee')">
+                    <g id="Pfaeffikersee" onmouseover="updateHoverData('8002')">
                         <circle class="cls-1" cx="4174" cy="4427" r="27"/>
                         <circle class="cls-1" cx="4174" cy="4481" r="27"/>
                         <circle class="cls-1" cx="4174" cy="4535" r="27"/>
