--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
     <div class="column">
         <svg class="svg2" viewBox="0 0 6272 7360" xmlns="http://www.w3.org/2000/svg">
-            <g id="Dots">
+            <g id="Dots" class="map">
                 <g id="Seen">
                     <g id="Greifensee" onmouseover="updateHoverData('See')">
                         <circle class="cls-1" cx="3148" cy="4319" r="27"/>
