implemented easter egg

--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
     </div>
         </div>
     <div id="mypopup">
-        <h2>PLZ: </h2><h2 id="plzPopup"></h2>
-        <h2>New Cases: </h2><h2 id="casesPopup"></h2>
-        <h2>Population: </h2><h2 id="populationPopup"></h2>
+        <div id="easterEgg"></div>
+        <h2 id="plzPopup"></h2>
+        <h2 id="casesPopup"></h2>
+        <h2 id="populationPopup"></h2>
     </div>
     <div class="column">
         <svg class="svg2" viewBox="0 0 6272 7360" xmlns="http://www.w3.org/2000/svg">
